--- a/package.json
+++ b/package.json
@@ -7,30 +7,20 @@
     "bower": "^1.7.9",
     "browser-sync": "^2.17.3",
     "gulp": "github:gulpjs/gulp#4.0",
-    "npm-check-updates": "^2.8.5",
     "pug": "^2.0.0-beta6"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.16.0",
     "del": "^2.2.2",
     "fs": "0.0.2",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-cached": "^1.1.0",
     "gulp-clean-css": "^2.0.13",
-    "gulp-combine-media-queries": "^0.2.0",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-css-base64": "^1.3.4",
-    "gulp-eslint": "^3.0.1",
-    "gulp-filter": "^4.0.0",
-    "gulp-htmlhint": "^0.3.1",
-    "gulp-jshint": "^2.0.1",
     "gulp-modernizr": "^1.0.0-alpha",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.1.0",
-    "gulp-pug-lint": "^0.1.6",
     "gulp-raster": "^0.1.0",
     "gulp-real-favicon": "^0.2.1",
     "gulp-rename": "^1.2.2",
@@ -45,26 +35,16 @@
     "gulp-util": "^3.0.7",
     "gulp-zip": "^3.2.0",
     "gulp.spritesmith": "^6.2.1",
-    "htmlhint-stylish": "^1.0.3",
-    "jshint": "^2.9.3",
-    "jshint-stylish": "^2.2.1",
     "main-bower-files": "^2.13.1",
-    "vinyl-ftp": "^0.5.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
+    "vinyl-ftp": "^0.5.0"
   },
   "scripts": {
     "set-all": "npm run gem-install && npm run npm-update && npm run npm-install-g && npm run gulp-install && npm run bower-install",
     "gem-install": "gem update && gem update --system && gem install compass scss_lint",
     "npm-update": "npm install -g npm",
-    "npm-install-g": "npm install -g gulp-cli pug bower htmlhint jshint eslint npm-check-updates",
+    "npm-install-g": "npm install -g gulp-cli pug bower",
     "gulp-install": "npm install",
-    "bower-install": "bower install && gulp libsBower && gulp ie8 && gulp modernizr && gulp all-js"
+    "bower-install": "bower install && gulp libsBower && gulp modernizr"
   },
   "repository": {
     "type": "git",
@@ -90,12 +70,7 @@
     "Modernizr",
     "Bower",
     "Browsersync",
-    "ESLint",
-    "JSHint",
-    "HTMLHint",
-    "Autoprefixer",
-    "Babel",
-    "Webpack"
+    "Autoprefixer"
   ],
   "author": "Kudinov Fedor",
   "license": "MIT",
